# cloudstate_rust

./: Cargo.toml  DONE.md  README.md  TODO.md  shoppingcart-client  shoppingcart-server  shoppingcart-server-prost  shoppingcart-server-protobuf
cloudstate-core/: Cargo.toml
cloudstate-core-derive/: Cargo.toml
cloudstate-core-derive/src/: lib.rs
cloudstate-core-derive/tests/: incorrect_package_attribute.rs  missing_package_attr.rs  missing_package_attr.stderr  package_attribute_without_value.rs  shopping_cart_test.rs
cloudstate-core/src/: eventsourced.rs  lib.rs
cloudstate-message-derive/: Cargo.toml
cloudstate-message-derive/tests/: incorrect_package_attribute.rs  missing_package_attr.rs  missing_package_attr.stderr  package_attribute_without_value.rs  shopping_cart.rs  shopping_cart_test.rs
cloudstate-prost-derive/: Cargo.toml
cloudstate-prost-derive/src/: lib.rs
cloudstate-prost-derive/tests/: all.rs  package_attribute_without_value.rs  package_attribute_without_value.stderr
cloudstate-protobuf-derive/: Cargo.toml
cloudstate-protobuf-derive/src/: lib.rs
cloudstate-protobuf-derive/tests/: incorrect_package_attribute.rs  missing_package_attr.rs  shopping_cart_test.rs
cloudstate-server/: Cargo.toml
cloudstate-server/src/: lib.rs
command-macro-derive/: Cargo.toml  README.md
command-macro-derive/src/: lib.rs
command-macro-derive/tests/: incorrect_package_attribute.rs  incorrect_package_attribute.stderr  missing_package_attr.rs  package_attribute_without_value.rs  shopping_cart_test.rs
command_macro_derive/: Cargo.toml
command_macro_derive/src/: lib.rs
command_macro_derive/tests/: Cargo.toml  shopping_cart_test.rs
command_macro_derive/tests/src/: lib.rs
entity-spike/src/: main.rs
entity_spike/: Cargo.toml
entity_spike/src/: main.rs
protocols/: .gitignore  Cargo.toml  build.rs  generate-desc  shoppingcart.desc
protocols/protocol/cloudstate/: event_sourced.proto
protocols/src/: lib.rs
server-spike/: Cargo.toml
server-spike/examples/: client.rs  shopping_cart.rs  shopping_cart2.rs  shopping_cart_prost.rs  shopping_cart_protobuf.rs
server-spike/src/: client.rs  lib.rs
server_spike/: Cargo.toml
server_spike/examples/: shopping_cart.rs  shopping_cart2.rs
server_spike/src/: client.rs  lib.rs  main.rs  server.rs  shopping_cart.rs
shopcart-example/: Cargo.toml
shopcart-example/src/: main.rs
shopcart-example/tests/: test.rs
shopping-cart-example/: Cargo.toml
shopping-cart-example/src/: lib.rs  main.rs
shopping-cart-example/tests/: test.rs
spike/: Cargo.toml
spike/src/: README.md  main.rs
src/: main.rs
