[workspace]

members = [
    "cloudstate-core",
    "cloudstate-protobuf-derive",
    "command-macro-derive",
    "protocols",
    "entity-spike",
    "server-spike",
]

[patch.crates-io]
# Override Prost dependencies to experiment with injecting protobuf package into the generated code
# TODO comment it for now
#prost = { path = "../prost" }
#prost-types = { path = "../prost/prost-types" }
#prost-derive = { path = "../prost/prost-derive" }
#prost-build = { path = "../prost/prost-build" }

