[workspace]

members = [
    "cloudstate-core",
    "cloudstate-prost-derive",
    "protocols",
    "entity-spike",
    "cloudstate-server",
    "shopping-cart-example",
]

[patch.crates-io]
# Override Prost dependencies to experiment with injecting protobuf package into the generated code
# TODO comment it for now
#prost = { path = "../prost" }
#prost-types = { path = "../prost/prost-types" }
#prost-derive = { path = "../prost/prost-derive" }
#prost-build = { path = "../prost/prost-build" }

