[package]
name = "entity-spike"
version = "0.1.0"
authors = ["Yury Gribkov <yury.gribkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocols = { path = "../protocols" }

prost = "0.6"
prost-types = "0.6"
bytes = "0.5.4"

