[package]
name = "server-spike"
version = "0.1.0"
authors = ["Yury Gribkov <yury.gribkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocols = { path = "../protocols" }
command_macro_derive = { path = "../command_macro_derive" }
tonic = "0.2"
prost = "0.6"
prost-types = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.2"
tower = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
bytes = "0.5.4"

[[bin]]
name = "spike-server"
path = "src/server.rs"

[[bin]]
name = "spike-client"
path = "src/client.rs"